# photo-tv-sync

./: CLAUDE.md  README.md  pyproject.toml
src/photo_tv_sync/: cli.py  discovery.py  display.py  photos.py  state.py  tv.py
